# meta-ast

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  clippy.toml  deny.toml  lefthook.yml  rustfmt.toml
.config/: nextest.toml
.github/workflows/: benchmark.yml  build.yml  ci.yml  docs.yml  lint.yml  release.yml  test.yml
benches/: graph.rs  pipeline.rs
docs/: ARCHITECTURE.md  CI_CD.md  DEPLOY.md  DEV_CRATE_DECISIONS.md  README.md  ROADMAP.md  STRUCTURE.md
docs/adr/: 0001-stateful-import-resolver.md  0002-scope-resolution-heuristics.md  0003-unresolved-import-policy.md  0004-global-scope-synthetic-symbols.md
docs/rfcs/: 0001-language-loading-model.md  0002-error-semantics-and-recovery.md  0003-incremental-parsing-strategy.md  0004-graph-representation-and-scc.md  0005-output-contract-policy.md  0006-type-inference-scope.md  0007-dgraph-integration-scope.md  0008-graph-module.md  0009-cross-file-dependency-mapping.md  0010-deploy-manifests.md
docs/specs/: graph-model.md  requirements.md  symbol-extraction.md  traceability.md
src/: error.rs  lib.rs  main.rs  pipeline.rs
src/deploy/: check.rs  cut.rs  dependency.rs  manifest.rs  mesh.rs  metrics.rs  mod.rs  pod.rs  scanner.rs  tags.rs
src/extractor/: mod.rs
src/graph/: builder.rs  edge.rs  mod.rs  node.rs  resolver.rs  scc.rs
src/input/: mod.rs
src/interface/: args.rs
src/language/: c.rs  common.rs  cpp.rs  dataflow.rs  go.rs  import_resolver.rs  javascript.rs  mod.rs  python.rs  rust.rs  tsx.rs  typescript.rs
src/language/snapshots/: meta_ast__language__c__tests__c_insta_snapshot.snap  meta_ast__language__cpp__tests__cpp_insta_snapshot.snap  meta_ast__language__go__tests__go_insta_snapshot.snap  meta_ast__language__javascript__tests__js_insta_snapshot.snap  meta_ast__language__python__tests__python_insta_snapshot.snap  meta_ast__language__rust__tests__rust_insta_snapshot.snap  meta_ast__language__tsx__tests__tsx_insta_snapshot.snap  meta_ast__language__typescript__tests__ts_insta_snapshot.snap
src/model/: ids.rs  mod.rs  output.rs
src/output/: dashboard.rs  emitter.rs  graph.rs  inspect.rs  mod.rs
src/parser/: mod.rs
src/sink/: mod.rs
tests/: integration.rs
tests/fixtures/c/: functions.c  structs_enums.c
tests/fixtures/cpp/: classes.cpp  namespaces.cpp
tests/fixtures/go/: deep_nesting.go  functions.go  methods.go
tests/fixtures/javascript/: classes.js  functions.js  large_classes.js
tests/fixtures/mixed/: .gitignore
tests/fixtures/mixed/auth_microservice/: auth.go  hash.ts  (+2 more)
tests/fixtures/multi/: app.js  lib.py  main.py
tests/fixtures/python/: async_decorators.py  classes.py  deep_nesting.py  partial_syntax_error.py  simple_functions.py
tests/fixtures/rust/: functions.rs  large_file.rs  structs_enums.rs
tests/fixtures/tsx/: components.tsx
tests/fixtures/typescript/: interfaces.ts
tests/integration/: dashboard_test.rs  datagraph_test.rs  deploy_edge_cases_test.rs  deploy_mixed_test.rs  deploy_test.rs  edge_cases_test.rs  inspect_output_test.rs  output_format_test.rs  pipeline_test.rs
tests/integration/snapshots/: integration__integration__inspect_output_test__insta_all_languages_snapshot.snap  (+1 more)
(+47 files in other folders)
