[package]
name = "meta-ast"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"

[features]
default = []
embed-cytoscape = []

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
webbrowser = "1.2"
strum = { version = "0.28", features = ["derive"] }

# Configuration
dotenvy = "0.15"
dunce = "1.0.5"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Tree-Sitter Dependencies
tree-sitter = "0.26.3"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.25.0"

# Graph
petgraph = "0.8.3"

# Cli
clap = { version = "4.6", features = ["derive", "env", "color"] }
notify = "8.2.0"

# Parallelism
rayon = "1.10"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.5.0"

[dev-dependencies]
insta = { version = "1.47", features = ["json"] }
jsonschema = "0.46"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "graph"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
